--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -215,7 +215,7 @@ Everyday Life
   <button onclick="window.location.reload()" class="reload-page">
   Reload Page
 </button>
-    <button class="clear-inputs-btn">
+    <button onclick="clearCGPARecords()" class="clear-inputs-btn">
 Clear all changes
     </button>
     <button onclick="InstallPwa()" class="install-pwa-btn">
