--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
 
-<title>Privacy Policy - Calclulo</title>
+<title>Privacy Policy</title>
 <link rel="stylesheet" href="/assets/css/a-t-p.css" />
 <link rel="stylesheet" href="/assets/css/search.css" />
 <link rel="stylesheet" href="/assets/css/cookie.css" />
