--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
 
-<title>Terms of Use - Calclulo</title>
+<title>Terms of Use</title>
 <link rel="stylesheet" href="/assets/css/a-t-p.css" />
 <link rel="stylesheet" href="/assets/css/search.css" />
 <link rel="stylesheet" href="/assets/css/cookie.css" />
