--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#464BFF"/>
 
-<title>Nigeria Personal Income Tax Calculator</title>
+<title>Nigeria Personal Income Tax Calculator</title>   <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script> <!-- End Google Tag Manager -->
 <link rel="manifest" href="/assets/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Calclulo">
@@ -722,6 +722,10 @@ Everyday Life
   font-size: 14px;
   color: #222;
   font-family: young;
+  width: 100%;
+max-width: 600px;
+display: flex;
+flex-direction: column;
 }
 
 #resultdiv h3 {
@@ -743,6 +747,7 @@ Everyday Life
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   
   overflow: hidden;
+  
 }
 
 #resultdiv th, 
