--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#464BFF"/>
   <link href="/favicons/favicon.png" rel="icon" sizes="48x48"> <link href="/favicons/favicon-128.png" rel="icon" sizes="128x128"> <link href="/favicons/favicon-192.png" rel="icon" sizes="192x192">
   
-  <title>Calclulo - Free All in one online calculator</title>
+  <title>Calclulo - Free All in one online calculator</title>   <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-5BVJ6KMT');</script> <!-- End Google Tag Manager -->
   
   <link rel="manifest" href="/assets/manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,15 +17,6 @@
   <link rel="stylesheet" href="/assets/css/search.css"/>
   <link rel="stylesheet" href="/assets/css/cookie.css"/>
   
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3XP8T4CYE"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-H3XP8T4CYE');
-</script>
 
 <meta name="title" content="Calclulo: All In One Online Calculators for Finance Health Agriculture Tech and More">
 <meta name="description" content="Calclulo offers fast accurate and free online calculators and conversion tools for finance math health food agriculture engineering and daily life. Trusted by students professionals and farmers. Find calculators for loan APY conversions CGPA nutrition and more with clear explanations and mobile friendly design.">
@@ -109,6 +100,10 @@
 </head>
 
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BVJ6KMT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
   <header>
   <a class="home-link" href="/index.html">
