--- a/conversion/roman-numeral-date-converter.html
+++ b/conversion/roman-numeral-date-converter.html
@@ -442,6 +442,11 @@ Everyday Life
       border: .5px solid #42445A2E;
       
     }
+    #resultdiv h3,h4{
+      font-family: lexend;
+      font-size: .95em;
+    margin-bottom: -15px;
+    }
 
   </style>
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
