--- a/everyday-life/time-calculator.html
+++ b/everyday-life/time-calculator.html
@@ -196,19 +196,19 @@ Everyday Life
   <div class="input-group-main-wrap">
     <div class="input-group">
   <label>Day</label>
-  <input inputmode="numeric" type="text" id="dayOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="dayOne">
 </div>
 <div class="input-group">
   <label>Hour</label>
-  <input inputmode="numeric" type="text" id="hourOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="hourOne">
 </div>
 <div class="input-group">
   <label>Minute</label>
-  <input inputmode="numeric" type="text" id="minuteOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="minuteOne">
 </div>
 <div class="input-group">
   <label>Second</label>
-  <input inputmode="numeric" type="text" id="secondOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="secondOne">
 </div>
   </div>
 
@@ -258,16 +258,16 @@ Everyday Life
   <div class="input-group-main-wrap">
    
   <div class="input-group">
-    <input inputmode="numeric" type="text" id="dayTwo">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="dayTwo">
   </div>
   <div class="input-group">
-    <input inputmode="numeric" type="text" id="hourTwo">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="hourTwo">
   </div>
   <div class="input-group">
-    <input type="text" inputmode="numeric" id="minuteTwo">
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="minuteTwo">
   </div>
   <div class="input-group">
-    <input inputmode="numeric" type="text" id="secondTwo">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="secondTwo">
   </div>
 </div>
 <div class="input-group">
@@ -275,16 +275,16 @@ Everyday Life
 </div>
 <div class="input-group-main-wrap">
   <div class="input-group">
-    <input class="result" type="text" inputmode="numeric" id="dayResult">
+    <input class="result" type="text"   inputmode="numeric" pattern="[0-9]*" id="dayResult">
   </div>
   <div class="input-group">
-    <input inputmode="numeric" class="result"  type="text" id="hourResult">
+    <input   inputmode="numeric" pattern="[0-9]*" class="result"  type="text" id="hourResult">
   </div>
   <div class="input-group">
-    <input class="result"  type="text" inputmode="numeric" id="minuteResult">
+    <input class="result"  type="text"   inputmode="numeric" pattern="[0-9]*" id="minuteResult">
   </div>
   <div class="input-group">
-    <input class="result"  type="text" inputmode="numeric" id="secondResult">
+    <input class="result"  type="text"   inputmode="numeric" pattern="[0-9]*" id="secondResult">
   </div>
 </div>
 <div class="expanded-results"></div>
