--- a/finance/bond-price-calculator.html
+++ b/finance/bond-price-calculator.html
@@ -203,7 +203,7 @@ Everyday Life
 <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" inputmode="numeric" id="facevalue" >
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="facevalue" >
 </div>
 <div class="input-options">
    <div class="input-options-item">
@@ -246,7 +246,7 @@ Everyday Life
     <label>Yield <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     
     <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="yield-input">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="yield-input">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -347,7 +347,7 @@ Everyday Life
     <label>Annual coupon
     <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     <div class="input-select-wrap">
-      <input inputmode="numeric" type="text" id="annualcoupon">
+      <input   inputmode="numeric" pattern="[0-9]*" type="text" id="annualcoupon">
       <select id="annualcouponCurrencyorPercent">
         <option value="percent">%</option>
         <!--<option value="currency" id="selected-currency">cash</option>
