--- a/finance/custom-duty-calculator-for-vehicles-nigeria.html
+++ b/finance/custom-duty-calculator-for-vehicles-nigeria.html
@@ -208,7 +208,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric" type="text" id="carPriceUSD" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="carPriceUSD" >
     </div>
     <span class="input-tips">Total cost of the vehicle in <span class="currency-display-for-tooltip"></span></span>
     <div class="input-options">
@@ -257,7 +257,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input inputmode="numeric" type="text" id="exchangeRate">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="exchangeRate">
 </div>
     <span class="input-tips">Current market exchange rate from <span class="currency-display-for-tooltip"></span> to Nigerian Naira</span>
     <div class="input-options">
@@ -303,7 +303,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result" inputmode="numeric" type="text" id="vehicleValueNGN">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="vehicleValueNGN">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -348,7 +348,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result" inputmode="numeric" type="text" id="importDuty">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="importDuty">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -393,7 +393,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result" inputmode="numeric" type="text" id="levy">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="levy">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -438,7 +438,7 @@ Everyday Life
      <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result" inputmode="numeric" type="text" id="surcharge">
+   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="surcharge">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -483,7 +483,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result" inputmode="numeric" type="text" id="etl">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="etl">
 </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -528,7 +528,7 @@ Everyday Life
     <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result" inputmode="numeric" type="text" id="vat">
+   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="vat">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -573,7 +573,7 @@ Everyday Life
     <div class="currency-or-unit-input">
    <span class="unit-display">₦
    </span>
-   <input class="result" inputmode="numeric" type="text" id="totalCustomsCharges">
+   <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="totalCustomsCharges">
  </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -618,7 +618,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="unit-display">₦
   </span>
-  <input class="result" inputmode="numeric" type="text" id="totalVehicleCost">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" type="text" id="totalVehicleCost">
 </div>
     <div class="input-options">
    <div class="input-options-item">
