--- a/finance/rent-calculator.html
+++ b/finance/rent-calculator.html
@@ -211,7 +211,7 @@ Everyday Life
        <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" inputmode="numeric" id="income"  step="any" min="0">
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="income"  step="any" min="0">
        </div>
     <span class="input-tips">Enter your gross (pre-tax) income.</span>
     <div class="input-options">
@@ -298,7 +298,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" inputmode="numeric" id="monthly-debt"  step="any" min="0">
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="monthly-debt"  step="any" min="0">
     </div>
     <span class="input-tips">Includes loan payments, credit cards, etc.</span>
     <div class="input-options">
@@ -350,7 +350,7 @@ Everyday Life
     </label>
     
     <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="rent-ratio">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="rent-ratio">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -430,7 +430,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" inputmode="numeric" id="utility-cost"  step="any" min="0">
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="utility-cost"  step="any" min="0">
     </div>
     <span class="input-tips">Water, electricity, internet, etc.</span>
     <div class="input-options">
