--- a/finance/roi-calculator.html
+++ b/finance/roi-calculator.html
@@ -202,7 +202,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" inputmode="numeric"  id="amountInvested">
+  <input type="text"   inputmode="numeric" pattern="[0-9]*"  id="amountInvested">
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -248,7 +248,7 @@ Everyday Life
 <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" inputmode="numeric" id="amountReturned">
+  <input type="text"   inputmode="numeric" pattern="[0-9]*" id="amountReturned">
 </div>
 <div class="input-options">
    <div class="input-options-item">
