--- a/other/facebook-ads-cost-calculator.html
+++ b/other/facebook-ads-cost-calculator.html
@@ -201,7 +201,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-<input type="text" id="adspend" inputmode="numeric">
+<input type="text" id="adspend"   inputmode="numeric" pattern="[0-9]*">
 <div class="input-options">
    <div class="input-options-item">
   <svg class="description-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg>
@@ -249,7 +249,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric" type="text"  id="averageCpc">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text"  id="averageCpc">
     </div>
     <span class="input-tips"> Cost per click.</span>
     <div class="input-options">
@@ -294,7 +294,7 @@ Everyday Life
     <label>Lead Conversion Rate (%) <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
 
 <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="leadConversionRate">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="leadConversionRate">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
