--- a/other/risk-calculator.html
+++ b/other/risk-calculator.html
@@ -203,7 +203,7 @@ Everyday Life
   <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
   
   <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="probabilityOfFailureOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="probabilityOfFailureOne">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -250,7 +250,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input inputmode="numeric" type="text" id="LossOne">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="LossOne">
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -294,7 +294,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" class="result" inputmode="numeric" id="RiskOne">
+  <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="RiskOne">
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -343,7 +343,7 @@ Everyday Life
     <label>Probability of failure<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     
     <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="probabilityOfFailureTwo">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="probabilityOfFailureTwo">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -391,7 +391,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric" type="text" id="LossTwo">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="LossTwo">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -435,7 +435,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" inputmode="numeric" id="RiskTwo">
+    <input type="text" class="result"   inputmode="numeric" pattern="[0-9]*" id="RiskTwo">
     </div>
     <div class="input-options">
    <div class="input-options-item">
