--- a/ecology/bag-footprint-calculator.html
+++ b/ecology/bag-footprint-calculator.html
@@ -248,7 +248,7 @@ Everyday Life
 </div>
 <div data-input-id="How-many-times-will-you-use-it-bag-footprint-calculator" class="input-group">
   <label>How many times will you use it?<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
-  <input inputmode="numeric" type="text" name="numberofuse" id="numberofuse" />
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" name="numberofuse" id="numberofuse" />
   <div class="input-options">
    <div class="input-options-item">
   <svg class="description-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg>
@@ -289,7 +289,7 @@ Everyday Life
     <label>How many bags do you throw away every week?<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
     </label>
     <div class="input-select-wrap">
-    <input inputmode="numeric" type="text" id="numberofbagdisposed" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="numberofbagdisposed" >
     <select id="frequency">
       <option value="Day">Day</option>
       <option value="Week">Week</option>
