--- a/finance/sales-tax-calculator.html
+++ b/finance/sales-tax-calculator.html
@@ -207,7 +207,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric" type="text" id="price"  min="0" step="any" />
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="price"  min="0" step="any" />
     </div>
     <span class="input-tips">Enter the price of the item before or after tax.</span>
     <div class="input-options">
@@ -256,7 +256,7 @@ Everyday Life
     </label>
     
     <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="taxRate">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="taxRate">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -354,7 +354,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input type="text" inputmode="numeric" class="result" id="taxAmount" />
+  <input type="text"   inputmode="numeric" pattern="[0-9]*" class="result" id="taxAmount" />
   </div>
   <div class="input-options">
    <div class="input-options-item">
@@ -402,7 +402,7 @@ Everyday Life
   <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-  <input class="result" type="text" id="totalPrice" inputmode="numeric"/>
+  <input class="result" type="text" id="totalPrice"   inputmode="numeric" pattern="[0-9]*"/>
   </div>
   <div class="input-options">
    <div class="input-options-item">
