--- a/other/edpi-calculator.html
+++ b/other/edpi-calculator.html
@@ -201,7 +201,7 @@ Everyday Life
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
 
     </label>
-    <input inputmode="numeric" type="text" id="dpi" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="dpi" >
     <span class="input-tips">Your mouse's hardware sensitivity. Example: 400 to 1600 DPI is common.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -286,7 +286,7 @@ Everyday Life
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
       
     </label>
-    <input inputmode="numeric" type="text" id="sensitivity" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="sensitivity" >
     <span class="input-tips">Enter your in-game sensitivity. Decimal for CS:GO/Valorant, % for Fortnite.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -327,7 +327,7 @@ Everyday Life
   
   <div data-input-id="calculated-edpi-edpi-calculator" class="input-group">
     <label>Calculated eDPI <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
-    <input class="result" type="text" id="edpiResult" inputmode="numeric">
+    <input class="result" type="text" id="edpiResult"   inputmode="numeric" pattern="[0-9]*">
     <div class="input-options">
    <div class="input-options-item">
   <svg class="description-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg>
