--- a/other/facebook-money-calculator.html
+++ b/other/facebook-money-calculator.html
@@ -201,7 +201,7 @@ Everyday Life
     <svg class="currency-select-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M80-160v-640h800v640H80Zm80-80h640v-480H160v480Zm0 0v-480 480Zm160-40h80v-40h40q17 0 28.5-11.5T480-360v-120q0-17-11.5-28.5T440-520H320v-40h160v-80h-80v-40h-80v40h-40q-17 0-28.5 11.5T240-600v120q0 17 11.5 28.5T280-440h120v40H240v80h80v40Zm320-30 80-80H560l80 80Zm-80-250h160l-80-80-80 80Z"/></svg>
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
     </label>
-    <input inputmode="numeric" type="text" id="facebookViews">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="facebookViews">
     <span class="input-tips">Estimated daily video views across your Facebook page.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -249,7 +249,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric" type="text" id="cpm" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="cpm" >
     </div>
     
     <span class="input-tips">Enter your CPM in <span class="currency-display-for-tooltip"></span>. It’s what facebook pays for every 1,000 views.</span>
@@ -296,7 +296,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"  inputmode="numeric" >
+    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*" >
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -340,7 +340,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input inputmode="numeric"  type="text" class="result" id="monthlyRevenue">
+    <input   inputmode="numeric" pattern="[0-9]*"  type="text" class="result" id="monthlyRevenue">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -385,7 +385,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="yearlyRevenue" inputmode="numeric">
+    <input type="text" class="result" id="yearlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
