--- a/other/tiktok-money-calculator.html
+++ b/other/tiktok-money-calculator.html
@@ -201,7 +201,7 @@ Everyday Life
     <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
     
     </label>
-    <input inputmode="numeric" type="text" id="tiktokViews">
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="tiktokViews">
     <div class="input-options">
    <div class="input-options-item">
   <svg class="description-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M200-120v-640q0-33 23.5-56.5T280-840h400q33 0 56.5 23.5T760-760v640L480-240 200-120Zm80-122 200-86 200 86v-518H280v518Zm0-518h400-400Z"/></svg>
@@ -248,7 +248,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" inputmode="numeric" id="cpm" >
+    <input type="text"   inputmode="numeric" pattern="[0-9]*" id="cpm" >
     </div>
     <span class="input-tips">Enter your CPM in <span class="currency-display-for-tooltip"></span>. It’s what tiktok pays for every 1,000 views.</span>
     <div class="input-options">
@@ -294,7 +294,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="dailyRevenue"  inputmode="numeric">
+    <input type="text" class="result" id="dailyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -339,7 +339,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="monthlyRevenue" inputmode="numeric">
+    <input type="text" class="result" id="monthlyRevenue"   inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
@@ -384,7 +384,7 @@ Everyday Life
     <div class="currency-or-unit-input">
   <span class="currency-or-unit-display" >$
   </span>
-    <input type="text" class="result" id="yearlyRevenue"  inputmode="numeric">
+    <input type="text" class="result" id="yearlyRevenue"    inputmode="numeric" pattern="[0-9]*">
     </div>
     <div class="input-options">
    <div class="input-options-item">
