--- a/other/website-bandwidth-calculator.html
+++ b/other/website-bandwidth-calculator.html
@@ -202,7 +202,7 @@ Everyday Life
       
 
     </label>
-    <input inputmode="numeric" type="text" id="pageViews" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="pageViews" >
     <span class="input-tips">Enter how many times your website is viewed per day.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -248,7 +248,7 @@ Everyday Life
       
 
     </label>
-    <input inputmode="numeric" type="text" id="pageSize" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="pageSize" >
     <div class="radio-group">
       <div class="radio-wrapper">
         <label class="radio-wrapper" for="unitKB">
@@ -309,7 +309,7 @@ Everyday Life
 
 
     </label>
-    <input inputmode="numeric" type="text" id="redundancy" step="0.1" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="redundancy" step="0.1" >
     <span class="input-tips">Optional multiplier for scripts, backups, overhead. Default is 1.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -353,7 +353,7 @@ Everyday Life
   
      <div class="currency-or-unit-input">
    
-   <input inputmode="numeric" type="text" id="EstimatedMonthlyBandwidth" class="result">
+   <input   inputmode="numeric" pattern="[0-9]*" type="text" id="EstimatedMonthlyBandwidth" class="result">
    <span style="padding-right: 10px;letter-spacing: 1px;" class="unit-display">GB/month
    </span>
  </div>
