--- a/other/youtube-watch-time-calculator.html
+++ b/other/youtube-watch-time-calculator.html
@@ -203,7 +203,7 @@ Everyday Life
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
       
     </label>
-    <input inputmode="numeric" type="text" id="targetHours" >
+    <input   inputmode="numeric" pattern="[0-9]*" type="text" id="targetHours" >
     <span class="input-tips">Total watch hours you aim to reach, required for monetization is 4000 hours.</span>
     <div class="input-options">
    <div class="input-options-item">
@@ -251,13 +251,13 @@ Everyday Life
   <div class="input-select-wrap">
   
   <div class="currency-or-unit-input">
-    <input inputmode="numeric" style="padding-left: 0;" type="text" id="avgMinutes">
+    <input   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="avgMinutes">
     <span style="padding-right: 10px;" class="unit-display">minutes
     </span>
   </div>
   
   <div class="currency-or-unit-input">
-    <input inputmode="numeric" style="padding-left: 0;" type="text" id="avgSeconds">
+    <input   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="avgSeconds">
     <span style="padding-right: 10px;" class="unit-display">seconds</span>
   </div>
   
@@ -300,7 +300,7 @@ Everyday Life
   <svg id="input-tip-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
       </label>
-  <input inputmode="numeric" type="text" id="currentHours">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="currentHours">
   <span class="input-tips">Watch hours you've already accumulated.</span>
   <div class="input-options">
    <div class="input-options-item">
@@ -346,7 +346,7 @@ Everyday Life
     </label>
 
   <div class="currency-or-unit-input">
-  <input inputmode="numeric" type="text" id="retention">
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="retention">
   <span style="padding-right: 10px;color: #464BFF;" class="unit-display">%
   </span>
 </div>
@@ -393,7 +393,7 @@ Everyday Life
   <svg id="input-tip-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
 <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg>
       </label>
-  <input inputmode="numeric" type="text" id="videoLength" >
+  <input   inputmode="numeric" pattern="[0-9]*" type="text" id="videoLength" >
   <span class="input-tips">Total video length in minutes used with retention estimate.</span>
   <div class="input-options">
    <div class="input-options-item">
@@ -440,7 +440,7 @@ Everyday Life
   <label style="margin-top: 25px;">Required Views <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
   
   <div class="currency-or-unit-input">
-  <input class="result" inputmode="numeric" style="padding-left: 0;" type="text" id="RequiredViews">
+  <input class="result"   inputmode="numeric" pattern="[0-9]*" style="padding-left: 0;" type="text" id="RequiredViews">
   <span style="padding-right: 10px;" class="unit-display">views
   </span>
 </div>
