--- a/health/gfr-calculator.html
+++ b/health/gfr-calculator.html
@@ -541,6 +541,13 @@ Everyday Life
   font-family: young;
   color: #42445A;
 }
+.gfr-result-box h3,strong{
+  font-family: lexend;
+  font-size: .9em;
+}
+.gfr-result-box h3{
+  margin-bottom: -6px;
+}
 .gfr-result-box label{
   letter-spacing: .25px;
 }
