--- a/health/fat-Intake-calculator.html
+++ b/health/fat-Intake-calculator.html
@@ -637,7 +637,7 @@ color: #42445A;
 
 <script src="/assets/js/favourites.js" defer crossorigin="anonymous"></script>
 
-<script src="/assets/js/fat-intake-calculator.js" defer crossorigin="anonymous"></script>
+<script src="/assets/js/fat-intake-calculator.js" crossorigin="anonymous" defer></script>
 </body>
 
 </html>
