--- a/chemistry.html
+++ b/chemistry.html
@@ -199,7 +199,8 @@ Everyday Life
 </div>
 
 <div class="calculators-lists">
-  
+  <h1>General chemistry calculators </h1>
+  <a href="/chemistry/atom-calculator">Atom Calculator</a>
 </div>
   </section>
 
