--- a/other.html
+++ b/other.html
@@ -226,6 +226,8 @@ Everyday Life
 <a href="/other/tiktok-money-calculator">TikTok Money Calculator</a>
 <h1>Whop</h1>
 <a href="/other/whop-revenue-calculator">Whop Revenue Calculator</a>
+<h1>Other</h1>
+<a href="/other/tip-calculator.html">Tip Calculator</a>
 </div>
   </section>
 
